--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/forms": "^0.5.10",
+    "@tanstack/react-table": "^8.21.3",
     "autoprefixer": "^10.4.21",
     "lucide-react": "^0.525.0",
     "postcss": "^8.5.6",
