--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
   "dependencies": {
     "@tailwindcss/forms": "^0.5.10",
     "@tanstack/react-table": "^8.21.3",
+    "antd": "^5.26.4",
     "autoprefixer": "^10.4.21",
+    "axios": "^1.10.0",
+    "ethers": "^6.15.0",
     "lucide-react": "^0.525.0",
     "postcss": "^8.5.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.3",
+    "react-toastify": "^11.0.5",
     "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
