--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,14 @@
-# Environment Variables cho Production
-DB_ROOT_PASSWORD=your_secure_root_password
-DB_NAME=crm_db
-DB_USER=crm_user
-DB_PASSWORD=your_secure_password
+# Environment Variables Template
+# Copy this file to .env: cp .env.example .env
 
-# API URLs
+# API Configuration - kết nối với backend đang chạy trên host
 VITE_API_BASE_URL=http://localhost:3000
-VITE_APP_ENV=production
+VITE_APP_ENV=development
 
-# Security
-JWT_SECRET=your_jwt_secret_key
+# Frontend Configuration
+VITE_APP_NAME=CRM Dashboard
+VITE_APP_VERSION=1.0.0
 
-# Other configs
-VITE_APP_NAME=CRM Application
+# Optional configurations
+VITE_LOG_LEVEL=info
+COMPOSE_PROJECT_NAME=crm_fe
