--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
-version: '3.8'
+version: "3.8"
 
 services:
-  # Frontend (React)
+  # Frontend (React) - kết nối với backend đang chạy trên host
   frontend:
     build:
       context: .
@@ -13,45 +13,13 @@ services:
       - /app/node_modules
     environment:
       - NODE_ENV=development
-    depends_on:
-      - backend
-    networks:
-      - crm-network
+      - VITE_API_BASE_URL=http://host.docker.internal:3000
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
+# Backend và Database đã chạy sẵn, không cần Docker
+# Backend: http://localhost:3000
+# Database: kết nối trực tiếp
 
-  # Backend (Node.js - giả sử backend chạy trên port 3000)
-  backend:
-    # Thay thế bằng backend image của bạn
-    image: node:18-alpine
-    working_dir: /app
-    volumes:
-      - ../crm_be:/app  # Đường dẫn đến backend folder
-    ports:
-      - "3000:3000"
-    environment:
-      - NODE_ENV=development
-      - PORT=3000
-    command: ["npm", "run", "dev"]
-    networks:
-      - crm-network
-
-  # Database (MySQL/PostgreSQL - tùy chọn)
-  database:
-    image: mysql:8.0
-    environment:
-      MYSQL_ROOT_PASSWORD: rootpassword
-      MYSQL_DATABASE: crm_db
-      MYSQL_USER: crm_user
-      MYSQL_PASSWORD: crm_password
-    ports:
-      - "3306:3306"
-    volumes:
-      - mysql_data:/var/lib/mysql
-    networks:
-      - crm-network
-
-networks:
-  crm-network:
-    driver: bridge
-
-volumes:
-  mysql_data:
+# Uncomment phần dưới nếu cần database trong Docker
+# volumes:
+#   mysql_data:
