--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@aptos-labs/ts-sdk": "^3.1.3",
+    "@aptos-labs/wallet-adapter-react": "^7.0.1",
     "@hookform/resolvers": "^5.1.1",
     "@metamask/sdk": "^0.33.0",
     "@tailwindcss/forms": "^0.5.10",
