--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@hookform/resolvers": "^5.1.1",
     "@metamask/sdk": "^0.33.0",
     "@tailwindcss/forms": "^0.5.10",
+    "@tanstack/react-query": "^5.83.0",
     "@tanstack/react-table": "^8.21.3",
     "antd": "^5.26.4",
     "autoprefixer": "^10.4.21",
@@ -29,6 +30,8 @@
     "react-router-dom": "^7.6.3",
     "react-toastify": "^11.0.5",
     "tailwindcss": "^3.4.17",
+    "viem": "^2.32.0",
+    "wagmi": "^2.15.7",
     "web3": "^4.16.0",
     "yup": "^1.6.1"
   },
